--- a/Random Quote/style.css
+++ b/Random Quote/style.css
@@ -50,3 +50,23 @@ main{
     font-size: 1.5rem;
     text-align: center;
 }
+
+.buttons{
+    border: 1px solid #20293A;
+    border-radius: .5rem;
+    margin-top: 1.2rem;
+}
+
+#redo{
+    border-right: 1px solid #20293A ;
+}
+
+.button {
+    background-color: transparent;
+    border: none;
+    padding: .25rem .7rem;
+}
+
+img{
+    width: 2rem;
+}
