--- a/Alarado Homepage/style.css
+++ b/Alarado Homepage/style.css
@@ -13,6 +13,7 @@ body{
 header{
     display: flex;
     justify-content: space-between;
+    width: 100vw;
 }
 
 ul{
@@ -34,6 +35,10 @@ a{
     color: #223344;
 }
 
+header i::before{
+    display: none;
+}
+
 .switch{
     background-color: #111729;
     opacity: 0;
@@ -50,10 +55,6 @@ main{
     color: #223344;
 }
 
-.left{
-    margin-right: 7rem;
-}
-
 .left h3{
     font-size: .875rem;
 }
@@ -61,6 +62,7 @@ main{
 .left h1{
     font-size: 3.75rem;
     margin-top: 1rem;
+    width: 97%;
 }
 
 .left p{
@@ -106,20 +108,44 @@ button{
 }
 
 @media (max-width: 1024px) {
+    body{margin-left: 0;}
     header{
-        margin-left: -2.5rem;
+        padding: 2rem;
     }
 
     main{
         flex-direction: column;
-        margin-left: 2.75rem;
         width: 100%;
     }
 
     .right{
         order:-1;
-        justify-content: flex-start;
+        justify-content: center;
+        width: 100vw;
+        margin: 0;
     }
 
+    .left{padding: 7.18rem;}
 
+    .hero{
+        width: 50%;
+    }
+}
+
+@media (max-width: 680px) {
+    header{padding: 0 1.563rem}
+
+    .switch{display: none;}
+    nav{display: none;}
+    header i::before{display: inline;}
+
+    header i{
+        font-size: x-large;
+    }
+
+    .left{padding: 4.5rem;}
+
+    .hero{
+        width: 90%;
+    }
 }
