--- a/Alarado Homepage/style.css
+++ b/Alarado Homepage/style.css
@@ -13,8 +13,10 @@ body{
 header{
     display: flex;
     justify-content: space-between;
-    width: 100vw;
+    width: 80vw;
 }
+
+input[type="checkbox"] {display: none;}
 
 ul{
     display: flex;
@@ -27,7 +29,7 @@ ul{
 
 a{
     text-decoration: none;
-    color: #2233449d;
+    color: #4422229d;
     font-weight: 600;
 }
 
@@ -40,12 +42,46 @@ header i::before{
 }
 
 .switch{
-    background-color: #111729;
-    opacity: 0;
+    display: flex;
+    position: relative;
+    align-items: center;
+    color: transparent;
 }
 
-.switch input{
-    display: none;
+.switch img{
+    width: 1rem;
+}
+
+.switch::before{
+    position: absolute;
+    content: "";
+    width: 3rem;
+    height: 1.8rem;
+    background-color: #223344;
+    border-radius: 1.5rem;
+    z-index: -2;
+}
+
+.switch::after{
+    position: absolute;
+    content: "";
+    left: 1.4em;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #F2F9FE;
+    border-radius: 1.5rem;
+    z-index: -1;
+}
+
+#theme:checked + .switch::after{
+    position: absolute;
+    content: "";
+    left: 0.2em;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #F2F9FE;
+    border-radius: 1.5rem;
+    z-index: -1;
 }
 
 main{
@@ -72,7 +108,7 @@ main{
     font-weight: 600;
 }
 
-button{
+.start{
     background-color: #2A4DD0;
     color: white;
     border: none;
@@ -109,6 +145,7 @@ button{
 
 @media (max-width: 1024px) {
     body{margin-left: 0;}
+
     header{
         padding: 2rem;
     }
@@ -133,14 +170,19 @@ button{
 }
 
 @media (max-width: 680px) {
-    header{padding: 0 1.563rem}
+    header{padding: 0 1.563rem; width: 90vw;}
 
     .switch{display: none;}
-    nav{display: none;}
+    .option{display: none;}
     header i::before{display: inline;}
+    .right{width: 95vw;}
 
     header i{
         font-size: x-large;
+    }
+
+    label input{
+        display: none;
     }
 
     .left{padding: 4.5rem;}
