--- a/Alarado Homepage/style.css
+++ b/Alarado Homepage/style.css
@@ -8,6 +8,7 @@
 body{
     background-color: #F2F9FE;
     margin: 1.5rem 4.5rem;
+    width: 90vw;
 }
 
 header{
@@ -29,12 +30,12 @@ ul{
 
 a{
     text-decoration: none;
-    color: #4422229d;
+    color: #68748a;
     font-weight: 600;
 }
 
 .selected{
-    color: #223344;
+    color: #283949;
 }
 
 header i::before{
@@ -49,28 +50,34 @@ header i::before{
 }
 
 .switch img{
-    width: 1rem;
+    width: 1.2rem;
 }
+
+.moon{margin-left: .28rem;}
+
+.sun{margin-left: .4rem;}
 
 .switch::before{
     position: absolute;
     content: "";
-    width: 3rem;
-    height: 1.8rem;
+    width: 3.35rem;
+    height: 1.7rem;
     background-color: #223344;
     border-radius: 1.5rem;
     z-index: -2;
+    transition: 200ms ease-in-out;
 }
 
 .switch::after{
     position: absolute;
     content: "";
-    left: 1.4em;
-    width: 1.5rem;
-    height: 1.5rem;
+    left: 1.8em;
+    width: 1.4rem;
+    height: 1.4rem;
     background-color: #F2F9FE;
     border-radius: 1.5rem;
     z-index: -1;
+    transition: 200ms ease-in-out;
 }
 
 #theme:checked + .switch::after{
@@ -102,7 +109,7 @@ main{
 }
 
 .left p{
-    color: #2233449d;
+    color: #68748a;
     margin-top: 2rem;
     margin-bottom: 1.5rem;
     font-weight: 600;
@@ -128,7 +135,7 @@ main{
 .check{
     font-size: .875rem;
     font-weight: 520;
-    color: #2233449d;
+    color: #68748a;
     display: flex;
     align-items: center;
     margin-right: 1rem;
